; ModuleID = '/home/carl/AnghaBench/git/extr_environment.c_odb_pack_keep.c'
source_filename = "/home/carl/AnghaBench/git/extr_environment.c_odb_pack_keep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@O_RDWR = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@O_EXCL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @odb_pack_keep(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = load i32, i32* @O_RDWR, align 4
  %7 = load i32, i32* @O_CREAT, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @O_EXCL, align 4
  %10 = or i32 %8, %9
  %11 = call i32 @open(i8* %5, i32 %10, i32 384)
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = icmp sle i32 0, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %1
  %15 = load i32, i32* %4, align 4
  store i32 %15, i32* %2, align 4
  br label %26

16:                                               ; preds = %1
  %17 = load i8*, i8** %3, align 8
  %18 = call i32 @safe_create_leading_directories_const(i8* %17)
  %19 = load i8*, i8** %3, align 8
  %20 = load i32, i32* @O_RDWR, align 4
  %21 = load i32, i32* @O_CREAT, align 4
  %22 = or i32 %20, %21
  %23 = load i32, i32* @O_EXCL, align 4
  %24 = or i32 %22, %23
  %25 = call i32 @open(i8* %19, i32 %24, i32 384)
  store i32 %25, i32* %2, align 4
  br label %26

26:                                               ; preds = %16, %14
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i32 @open(i8*, i32, i32) #1

declare dso_local i32 @safe_create_leading_directories_const(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
